--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <nav class="header-nav">
             <a href="" class="logo">WEB<span class="logo-studio">STUDIO</span></a>
             <ul class="links">
-              <li class="item-link"><a href="" class="link-studio">Studio</a></li>
+              <li class="item-link "><a href="" class="link-studio current ">Studio</a></li>
               <li class="item-link"><a href="./portfolio.html" class="link-portfolio">Portfolio</a></li>
               <li class="item-link"><a href="" class="link-contacts">Contacts</a></li>
            </ul>
@@ -41,7 +41,7 @@
           Effective Solutions <br />
           for Your Business
         </h1>
-        <button type="button" class="button">Order Service</button>
+        <button type="button" class="button" data-modal-open>Order Service</button>
       </div>
       </section>
       <!-- Особливості роботи-->
@@ -385,6 +385,16 @@
        </div>
       </div>
     </footer>
+     <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-btn"  data-modal-close>
+        <svg class="modal-btn-icon" width="8" height="8">
+         <use href="./images/icons.svg#icon-close-black" ></use>
+        </svg>
+       </button>
+      </div>
+     </div>
+      <script src="./js/modal.js"></script>
   </body>
 </html>
 
